src/assets/styles/main.scss
/* Imports */
/* Note: only import what is needed */

@import 'colors';
@import 'node_modules/bulma/sass/utilities/initial-variables.sass';
@import 'node_modules/bulma/sass/utilities/functions.sass';
@import 'node_modules/bulma/sass/utilities/derived-variables.sass';
@import 'node_modules/bulma/sass/helpers/color.sass';
@import 'node_modules/bulma/sass/utilities/mixins.sass';
@import 'node_modules/bulma/sass/helpers/typography.sass';

/* System */

html {
  overflow: hidden;
}

/* Element width */

.width-20px {
  max-width: 20px;
  min-width: 20px;
  width: 20px;
}

.width-40px {
  max-width: 40px;
  min-width: 40px;
  width: 40px;
}

.width-45px {
  max-width: 45px;
  min-width: 45px;
  width: 45px;
}

.width-50px {
  max-width: 50px;
  min-width: 50px;
  width: 50px;
}

.width-60px {
  max-width: 60px;
  min-width: 60px;
  width: 60px;
}

.width-70px {
  max-width: 70px;
  min-width: 70px;
  width: 70px;
}

.width-80px {
  max-width: 80px;
  min-width: 80px;
  width: 80px;
}

.width-100px {
  max-width: 100px;
  min-width: 100px;
  width: 100px;
}

.width-110px {
  max-width: 110px;
  min-width: 110px;
  width: 110px;
}

.width-120px {
  max-width: 120px;
  min-width: 120px;
  width: 120px;
}

.width-130px {
  max-width: 130px;
  min-width: 130px;
  width: 130px;
}

.width-150px {
  max-width: 150px;
  min-width: 150px;
  width: 150px;
}

.width-170px {
  max-width: 170px;
  min-width: 170px;
  width: 170px;
}

.width-200px {
  max-width: 200px;
  min-width: 200px;
  width: 200px;
}

.width-220px {
  max-width: 220px;
  min-width: 220px;
  width: 220px;
}

.width-250px {
  max-width: 250px;
  min-width: 250px;
  width: 250px;
}

.width-300px {
  max-width: 300px;
  min-width: 300px;
  width: 300px;
}

.width-360px {
  max-width: 360px;
  min-width: 360px;
  width: 360px;
}

.width-400px {
  max-width: 400px;
  min-width: 400px;
  width: 400px;
}

.width-500px {
  max-width: 500px;
  min-width: 500px;
  width: 500px;
}

.width-5pct {
  width: 5%;
}

.width-10pct {
  width: 10%;
}

.width-15pct {
  width: 15%;
}

.width-20pct {
  width: 20%;
}

.width-25pct {
  width: 25%;
}

.width-30pct {
  width: 30%;
}

.width-50pct {
  width: 50%;
}

.width-80pct {
  width: 80%;
}

/* Element height */

.height-1rem {
  height: 1rem;
  max-height: 1rem;
  min-height: 1rem;
}

.height-30px {
  height: 30px;
  max-height: 30px;
  min-height: 30px;
}

.height-50px {
  height: 50px;
  max-height: 50px;
  min-height: 50px;
}

.height-60px {
  height: 60px;
  max-height: 60px;
  min-height: 60px;
}

.height-100px {
  height: 100px;
  max-height: 100px;
  min-height: 100px;
}

.height-120px {
  height: 120px;
  max-height: 120px;
  min-height: 120px;
}

.height-140px {
  height: 140px;
  max-height: 140px;
  min-height: 140px;
}

.height-200px {
  height: 200px;
  max-height: 200px;
  min-height: 200px;
}

.height-300px {
  height: 300px;
  max-height: 300px;
  min-height: 300px;
}
/* Text */

.ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

// Note: Manually add height to elements using this class. default 1.5rem
.vertical-scroll {
  max-height: 1.5rem;
  overflow-x: hidden;
  overflow-y: auto;
  white-space: normal;
}

// Note: Manually add width to elements using this class. default 100%
.horizontal-scroll {
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
}

// Adds a shadow to scrollable boxes if there is an option to scroll down or up
.scrollbox-shadowed {
  background: /* First two gradients - Shadow covers . Last two gradients - Shadows */
    linear-gradient(rgba(255, 255, 255, 1) 30%, rgba(255, 255, 255, 0)),
    linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 70%) 0 100%,
    radial-gradient(farthest-side at 50% 0, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)),
    radial-gradient(farthest-side at 50% 100%, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)) 0 100%;

  /* Some browsers don't support this in the shorthand */
  background-attachment: local, local, scroll, scroll;
  background-color: rgba(255, 255, 255, 1);
  background-repeat: no-repeat;
  background-size: 100% 40px, 100% 40px, 100% 14px, 100% 14px;
}

.overflow-anywhere {
  overflow-wrap: anywhere;
}

.is-vcentered {
  vertical-align: middle;
}

/* Buttons */

.add-button:hover {
  @extend .has-text-dark;
}

.remove-button:hover {
  @extend .has-text-danger;
}

/* Pseudo elements */

.suffix::after {
  display: block;
  position: absolute;
  right: 0.5rem;
  top: 50%;
  transform: translateY(-50%);
}

.seconds-suffix::after {
  @extend .is-size-7;
  content: 'seconds';
}

.seconds-suffix {
  input {
    padding-right: 60px;
  }
}

.minute-suffix::after {
  @extend .is-size-7;
  content: 'minutes';
}

.minute-suffix {
  input {
    padding-right: 60px;
  }
}

.mb-suffix::after {
  @extend .is-size-7;
  content: 'MB';
}

.mb-suffix {
  input {
    padding-right: 30px;
  }
}

/* Bulma enhancement */

// Equivalent to 'has-text-light'
$color-light: hsl(0, 0%, 96%);

.columns-divided {
  > .column {
    border-right: solid 2px $color-light;
  }

  > .column:last-child {
    border-right: 0;
  }
}

.dropdown-menu {
  .dropdown-content {
    @extend .scrollbox-shadowed;
    @extend .vertical-scroll;
    max-height: 12rem;
  }
}

.card {
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
  margin-bottom: 2rem;
}

.card .content {
  font-size: 14px;
}

.button.is-light.is-focused,
.button.is-light:focus {
  border-color: #3273dc;
}

.is-justify-content-space-around {
  justify-content: space-around;
}

.is-justify-content-space-between {
  justify-content: space-between;
}

.is-fullwidth {
  width: 100%;
}

.is-flex-grow-1 {
  flex-grow: 1;
}

/* Modal */
.modal.is-active {
  z-index: 102;
}

.modal-card {
  border-radius: 6px;
}

.modal-card:not(.modal-content) {
  top: 10%;
}

.modal .modal.is-large {
  top: 2%;
}

.modal-footer-buttons {
  justify-content: space-between;
}

.modal-card-foot.columns {
  z-index: 2;
}

/* Vue3Datepicker */

.dp__preset_ranges { /* stylelint-disable-line */
  width: 150px;
}

.dp__action_row { /* stylelint-disable-line */
  min-width: 100%;
}

.dp__input_icon { /* stylelint-disable-line */
  color: #000;
}

/* Collapsed */

.collapsible {
  cursor: pointer;
  display: flex;
  flex-direction: row;
  justify-items: center;
}

.collapsible-card:hover {
  outline: 1px solid $color-nobel;
}

.card.collapsed .collapsible-content {
  display: none;
}

.collapsed .media {
  margin: 0;
}

.collapsible .fa-angle-down {
  align-self: center;
}

.inline-collapsed-header {
  align-items: center;
  display: flex;
}

/* Shapes */
.dot {
  background-color: $color-curious-blue;
  border-radius: 50%;
  display: inline-block;
  height: 0.5rem;
  margin-left: -0.25rem;
  margin-right: 0.25rem;
  width: 0.5rem;
}

.square {
  background-color: $color-curious-blue;
  display: inline-block;
  height: 0.5rem;
  width: 0.5rem;
}

/* Other */

.is-clickable {
  cursor: pointer;
}

.is-fullheight {
  height: 100%;
}

.has-overflow-y-auto {
  overflow-y: auto;
}

.tag-cell {
  max-width: 0;
}

.textarea-field {
  margin-bottom: 10px;
}

.document-description {
  line-height: 1rem;
}

.white-space-pre {
  white-space: pre;
}

/* editor dropdown width */
.document-selection-wrapper {
  max-width: 450px;
  min-width: 300px;
}

